# Autogent-landing

./: .claudeignore  .env.example  LICENSE  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.claude/: launch.json
agent-backend/: .env.example  Dockerfile  funnel.py  main.py  pyproject.toml
agent-backend/ai-service/: .env.example  env.example  funnel.py  main.py  pyproject.toml  security.py  telegram_notifier.py
agent-backend/ai-service/tests/: test_agent.py
agent-backend/deploy/: ai-service.service  gateway.service  nginx-gateway.conf  redeploy.sh  setup-ai-server.sh  setup-gateway.sh
agent-backend/gateway/: .env.example  env.example  main.py  pii_detector.py  pyproject.toml  telegram_notifier.py
deploy/: nginx-site.conf  redeploy-site.sh  setup-ai-server.sh  setup-main-server.sh
public/: zen_KEvdQJTL1XysYTm2Uqxf3EqVUucCoXGGJwViQWENA93uWeG3vJ5egfxPCpg9yKvd.html
src/: App.jsx  index.css  main.jsx
src/components/: AgentChat.jsx  AuditCTA.jsx  Aurora.jsx  Beams.jsx  Capabilities.jsx  CaseArchetypes.jsx  CasesShowcase.jsx  DarkVeil.jsx  Dither.jsx  FaqSection.jsx  Footer.jsx  Header.jsx  Hero.jsx  HeroBackground.css  HeroBackground.jsx  HowItWorks.jsx  Integrations.jsx  LeadChat.jsx  Objections.jsx  Pain.jsx  QualForm.jsx  TextType.jsx  TiltedCard.css  TiltedCard.jsx  ValueProps.jsx  VideoSection.jsx  shared.jsx
src/pages/: PrivacyPolicy.jsx
