[project]
name = "autogent-lead-agent"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
    "pydantic>=2.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
