[tool.pytest.ini_options]
markers = [
    "integration: requires running server (set AGENT_URL env var)",
]

[project]
name = "autogent-ai-service"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
    "pydantic>=2.9",
]
